# sem2_python_lab4

./: Dockerfile  README.md  entrypoint.sh  example_1.jsonl  example_2.jsonl  pyproject.toml  requirements.txt
src/: __main__.py  cli.py
src/base_classes/: descriptors.py  enums.py  exceptions.py  task.py  task_manager.py  task_queue.py  task_source.py
src/executors/: async_executor.py  handler_protocol.py  handlers.py
src/sources/: __init__.py  json.py  registry.py  stdin.py
tests/: fixtures.py  test_async_executor.py  test_handlers.py  test_task_queue.py  test_task_queue_iterator.py
