[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "click==8.3.2",
    "colorama==0.4.6",
    "freezegun==1.5.5",
    "iniconfig==2.3.0",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "packaging==26.0",
    "pluggy==1.6.0",
    "pygments==2.20.0",
    "pytest==9.0.3",
    "python-dateutil==2.9.0.post0",
    "rich==15.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "typer==0.24.1",
]
